<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/placeholder_field_2"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="85dp"
        android:textSize="34sp"
        android:typeface="monospace"
        android:textColor="@color/white"
        android:text="@string/welcome_pt1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="34sp"
        android:textColor="@color/white"
        android:typeface="monospace"
        android:text="@string/welcome_pt2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="75dp"
        android:textSize="34sp"
        android:textColor="@color/white"
        android:typeface="monospace"
        android:text="@string/welcome_pt3"/>

    <!-- Username Input -->
    <TextView
        android:text="@string/username"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/UsernameInput"/>
    <EditText
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/UsernameInput"/>

    <!-- Password Input -->
    <TextView
        android:text="@string/password"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/PasswordInput"/>

    <EditText
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/PasswordInput"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Auth Button -->
        <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/black"
            android:id="@+id/AuthButton"/>

        <!-- New Account Button -->
        <Button
            android:text="@string/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:id="@+id/NewUserButton"/>
    </FrameLayout>
</LinearLayout>