<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semiTransparent"
    tools:context="kylemeyers22.heroku.GameFragment">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/game_list_header"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

    <!-- Games List -->
    <ListView
        android:id="@+id/gamesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Initiate Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gameRefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/refresh"
            android:textColor="@color/black"
            android:textAllCaps="false"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/getGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:text="@string/game_button"/>

    </LinearLayout>
</LinearLayout>